# goat-book

./: .gitignore  Dockerfile  README.md  functional_tests.py  pyproject.toml
functional_tests/: tests.py
infra/: ansible-provision.yaml  env.j2  inventory_production.yaml  inventory_staging.yaml  site.yaml
lists/: tests.py  views.py
lists/migrations/: 0002_item_text.py
lists/templates/: base.html  home.html  list.html
src/functional_tests/: base.py  test_layout_and_styling.py  test_list_item_validation.py  test_simple_list_creation.py
src/lists/: forms.py  models.py  urls.py  views.py
src/lists/migrations/: 0001_initial.py  0003_list.py  0004_item_list.py  0005_alter_item_unique_together.py  0006_alter_item_options.py
src/lists/static/: lists.js
src/lists/static/tests/: Spec.js  SpecRunner.html
src/lists/templates/: base.html  list.html
src/lists/tests/: test_forms.py  test_models.py  test_views.py
src/superlists/: settings.py  urls.py
superlists/: settings.py  urls.py
