[tool.poetry]
name = "goat-book"
version = "0.1.0"
description = ""
authors = ["monkeysprocket <mjquinn88@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "<4.3"
selenium = "^4.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
