[tool.poetry]
name = "goat-book"
version = "0.1.0"
description = ""
authors = ["monkeysprocket <mjquinn88@outlook.com>"]
readme = "README.md"
packages = [{include = "lists", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "<4.3"
whitenoise = "^6.7.0"
gunicorn = "^23.0.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
selenium = "^4.23.1"
ansible = "^10.4.0"

[build-system]
requires = ["poetry-core>= 1.7"]
build-backend = "poetry.core.masonry.api"
